# molpipx

./: .buildinfo  Cargo.toml  LICENSE  README.md  Sh_factory.py  Sh_factory_anisopip.py  Sh_factory_linear.py  Sh_factory_pipnn.py  about.html  api.html  citing.html  genindex.html  index.html  installation.html  load_data_ddethanol.py  molpipx.html  molpipx.load_pip.html  molpipx.pip_anisotropic_flax.html  molpipx.pip_flax.html  molpipx.pip_generator.html  molpipx.pipgp_flax.html  molpipx.pipnn_flax.html  molpipx.trainig_anisotropic_model.html  molpipx.training_linear_model.html  molpipx.utils.html  molpipx.utils_gradients.html  molpipx.utils_training.html  monomials_2_1_1_6.py  msa_files.html  objects.inv  pip_generator.py  pixi.toml  polynomials_2_1_1_6.py  publications.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  (+3 more)
rust/: Cargo.toml  README.md  bench.py  bench_runtime.py  process.py  runtime_bench_almost_complete.csv  runtime_bench_complete.csv
rust/benches/: foo.rs  pip.rs
rust/data/molecule_A2B/: MOL_2_1_3.POLY  MOL_2_1_5.POLY  MOL_2_1_6.POLY  MOL_2_1_7.POLY  MOL_2_1_8.POLY
rust/data/molecule_A2B2/: MOL_2_2_3.MONO  MOL_2_2_3.POLY  MOL_2_2_4.POLY  MOL_2_2_5.POLY  MOL_2_2_6.MONO  MOL_2_2_6.POLY  MOL_2_2_7.POLY  MOL_2_2_8.POLY
rust/data/molecule_A2B2C/: MOL_2_2_1_3.MONO  MOL_2_2_1_3.POLY  MOL_2_2_1_8.POLY
rust/data/molecule_A2BC/: MOL_2_1_1_3.POLY  MOL_2_1_1_4.POLY  MOL_2_1_1_5.POLY  MOL_2_1_1_7.POLY  MOL_2_1_1_8.POLY
rust/data/molecule_A2BCD/: MOL_2_1_1_1_3.POLY  MOL_2_1_1_1_4.POLY  MOL_2_1_1_1_5.POLY  MOL_2_1_1_1_6.MONO  MOL_2_1_1_1_6.POLY  MOL_2_1_1_1_7.POLY  MOL_2_1_1_1_8.POLY
rust/data/molecule_A3/: MOL_3_3.MONO  MOL_3_3.POLY  MOL_3_4.POLY  MOL_3_5.POLY  MOL_3_6.POLY  MOL_3_7.POLY  MOL_3_8.POLY
rust/data/molecule_A3B/: MOL_3_1_3.MONO  MOL_3_1_3.POLY  MOL_3_1_4.POLY  MOL_3_1_5.MONO  MOL_3_1_5.POLY  MOL_3_1_6.POLY  MOL_3_1_7.POLY  MOL_3_1_8.POLY
rust/data/molecule_A3B2/: MOL_3_2_3.MONO  (+11 more)
rust/src/: bench.csv  generator.py  lib.rs  load_data_methane.py  main.rs  main.rs.bac  python.rs
(+851 files in other folders)
