[package]
name = "rust_msa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autodiff = { path = "/u/drehwald/prog/rust/library/autodiff" }
faer          = "0.11"
faer-core     = "0.11"
faer-lu       = "0.11"
faer-qr       = "0.11"
faer-cholesky = "0.11"
faer-svd      = "0.11"
reborrow = "0.5.4"
dyn-stack = "0.9.0"


[lib]
name = "pipenzyme"
path = "src/lib.rs"

[profile.release]
lto = "fat"

[profile.dev]
lto = "fat"
